--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
     <div class="container-fluid" style="max-width: 1400px">
       <div class="row">
         <aside class="col-lg-3 pb-3">
-          <h2 id="form-heading" class="mt-1 h3 form-label">
+          <h2
+            id="form-heading"
+            class="h2-heading mt-1 h3 form-label font-weight-bold"
+          >
             Search for a City:
           </h2>
           <form id="search-form" class="form">
-            <div class="form-inline form-group">
-              <div class="input-group">
+            <div class="form form-group">
+              <div class="input-group flex-column justify-content-start">
                 <input
                   class="form-input weather-search"
                   type="text"
@@ -50,7 +53,7 @@
                   aria-labelledby="form-heading"
                   aria-controls="today forecast"
                 />
-                <div class="input-group-append">
+                <div class="input-group-append mt-3">
                   <button
                     type="submit"
                     class="btn search-button"
