Implement getCityCoordinates function to generate a [lat,lon] array based on user inputed city

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <title>Weather Dashboard</title>
   </head>
 
+  <!-- TODO: change onclick to event delegate submission -->
+  <!-- ! input pattern="[A-Za-z]" // The pattern attribute specifies a regular expression that the <input> element's value is checked against on form submission. -->
+
   <body>
     <header
       class="container-fluid text-center text-white bg-dark p-2 weather-header"
@@ -91,6 +94,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./ignore/apikey.js"></script>
     <script src="./assets/script.js"></script>
   </body>
 </html>
