--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="input-group-append mt-3">
                   <button
                     type="submit"
-                    class="btn search-button"
+                    class="btn search-button py-3 pb-5"
                     id="search-button"
                     aria-label="submit search"
                   >
