--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <aside class="col-lg-3 pb-3">
           <h2
             id="form-heading"
-            class="h2-heading mt-1 h3 form-label font-weight-bold"
+            class="h2-heading mt-1 form-label font-weight-bold pb-3"
           >
             Search for a City:
           </h2>
@@ -49,7 +49,7 @@
             <div class="form form-group">
               <div class="input-group flex-column justify-content-start">
                 <input
-                  class="form-input weather-search"
+                  class="form-input weather-search px-3"
                   type="text"
                   id="search-input"
                   placeholder="London"
