--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
         <div class="col-lg-9 pb-3">
           <section
             id="today"
-            class="mt-3"
+            class="mt-3 px-3 py-3"
             role="region"
             aria-live="polite"
           ></section>
           <section
             id="forecast"
-            class="row mt-3"
+            class="row mt-3 px-3"
             role="region"
             aria-live="polite"
           ></section>
