--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
           <div class="list-group" id="history"></div>
         </aside>
 
-        <div class="col-lg-9 pb-3">
+        <div class="col-lg-9 pb-3 px-5 py-5 flex-column">
           <section
             id="today"
-            class="mt-3 px-3 py-3"
+            class="mt-3 flex-column row today-style"
             role="region"
             aria-live="polite"
           ></section>
           <section
             id="forecast"
-            class="row mt-3 px-3"
+            class="mt-3 flex-row row justify-content-between"
             role="region"
             aria-live="polite"
           ></section>
