--- a/index.html
+++ b/index.html
@@ -73,19 +73,27 @@
           <div class="list-group" id="history"></div>
         </aside>
 
-        <div class="col-lg-9 pb-3 px-5 py-5 flex-column">
+        <div class="col-lg-9 pb-3 px-5 flex-column">
           <section
             id="today"
             class="mt-3 flex-column row today-style"
             role="region"
             aria-live="polite"
           ></section>
-          <section
-            id="forecast"
-            class="mt-3 flex-row row justify-content-between"
-            role="region"
-            aria-live="polite"
-          ></section>
+          <section id="wrap" class="mt-3 flex-column">
+            <h2
+              id="forecast-heading"
+              class="row h2-heading mt-1 form-label font-weight-bold pb-3 hide"
+            >
+              5-Day Forecast:
+            </h2>
+            <section
+              id="forecast"
+              class="flex-row row justify-content-between"
+              role="region"
+              aria-live="polite"
+            ></section>
+          </section>
         </div>
       </div>
     </div>
