Improve logic to show/hide forecastHeading when necessary

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <section id="wrap" class="mt-3 flex-column">
             <h2
               id="forecast-heading"
-              class="row h2-heading mt-1 form-label font-weight-bold pb-3 hide"
+              class="row h2-heading mt-1 form-label font-weight-bold pb-3"
             >
               5-Day Forecast:
             </h2>
