Apply style to .dayDiv, unify border size for all elements with borders and adjust padding for aside section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   aria-labelledby="form-heading"
                   aria-controls="today forecast"
                 />
-                <div class="input-group-append mt-3">
+                <div class="input-group-append mt-3 flex-column">
                   <button
                     type="submit"
                     class="btn search-button py-3 pb-5"
@@ -65,7 +65,7 @@
                   >
                     Search
                   </button>
-                  <hr class="hr weather-hr" />
+                  <hr class="hr weather-hr mt-5" />
                 </div>
               </div>
             </div>
@@ -102,7 +102,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./ignore/apikey.js"></script>
-    <script src="./assets/script.js"></script>
+    <script src="./assets/javascript/apikey.js"></script>
+    <script src="./assets/javascript/script.js"></script>
   </body>
 </html>
