Start to implement logic to check for valid inputs

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                   class="form-input weather-search px-3"
                   type="text"
                   id="search-input"
+                  pattern="[A-Za-z]+"
+                  title="Must contain only letters"
                   placeholder="London"
                   aria-labelledby="form-heading"
                   aria-controls="today forecast"
